Adding slider to change grid dimension

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div class="header">ETCH-A-SKETCH</div>
-    <div class="controls"></div>
+    <div class="controls">
+        <div class="gridSlicer">
+            <input type="range" min="3" max="50" value="25" class="slicer">
+            <div class="gridDimension"></div>
+        </div>
+    </div>
 
     <div class="grid"></div>
     
